# mini-service-desk

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  compose.yaml  conftest.py  pyproject.toml  requirements.txt
app/: database.py  main.py
app/middleware/: security_headers.py
app/models/: comment.py  ticket.py  user.py
app/routers/: chat.py  comments.py  export.py  health.py  tickets.py  users.py
app/services/: chat_service.py  rate_limiter.py  security.py
docs/: EX3-notes.md
docs/runbooks/: compose.md
frontend/: .gitignore  api.py  index.html  streamlit_app.py  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/auth/: AuthContext.jsx  RequireAdmin.jsx  RequireAuth.jsx
frontend/src/components/: AdvancedFilterModal.jsx  ChatModal.jsx  CreateTicketModal.jsx  shell.jsx
frontend/src/pages/: AdminDashboardPage.jsx  AdminTicketPage.jsx  LoginPage.jsx  RegisterPage.jsx  TicketsDetailsPage.jsx  TicketsPage.jsx
scripts/: demo.sh  refresh.py  seed_admin.py
tests/: test_refresh.py  test_security.py  test_tickets.py  test_tickets_role.py  testcomments.py
