[project]
name = "mini-service-desk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.0",
    "anyio>=4.12.0",
    "email-validator>=2.3.0",
    "fastapi>=0.124.4",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.3.2",
    "pwdlib[argon2]>=0.3.0",
    "pydantic>=2.12.5",
    "pyjwt>=2.10.1",
    "pytest>=9.0.2",
    "pytest-anyio>=0.0.0",
    "python-multipart>=0.0.20",
    "redis>=7.1.0",
    "ruff>=0.14.10",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.38.0",
]
